--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="noindex, nofollow" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Stacy Mark, Web Developer"/>
+    <meta name="description" content="test"/>
     <link rel="apple-touch-icon" href="" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Stacy Mark, Web Developer</title>
+    <title>Test</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
